# config_reader

./: .gitignore  MANIFEST.in  pyproject.toml
config_reader/: __init__.py  read.py
project_config/: setup.py
